# Bank_System_Practice

BSP/: main.py  plan.txt  pyproject.toml  sql.py
BSP/fill_data/: fill.py
BSP/migrations/: env.py
BSP/migrations/versions/: 025f1f155ba6_30_roles.py  095d6d38512b_17_updated_tables.py  0aab2f8ee8c2_5_updated_tables_foreign_keys.py  23e773f03fb1_7_updated_tables.py  29d340bf7c29_22_updated_tables.py  2d87d4091e93_3_updated_tables.py  3cffefa4048b_19_updated_tables.py  3e54671eb9a2_26_updated_tables_tax_numbers.py  3f97e8a356d8_35_managers_confirmed.py  4c1de608e227_29_city_column.py  5dd7bb70c8cc_6_updated_tables.py  661a78d40435_15_updated_tables.py  683246421fea_27_account_statu.py  7013fa71dae8_28_managers_table.py  7126f60c0fec_32_managers_tokens.py  770fd6c73be0_24_updated_tables.py  7b0d39ab5efe_16_updated_tables.py  80fedfb7512c_33_managers_confirmed.py  832227ceacf3_21_updated_tables.py  8792e4f91f5d_11_updated_tables.py  a0d712db0ca7_12_updated_tables.py  a61e0a534180_9_updated_tables.py  a7c27163191f_18_updated_tables.py  a9e8213d5368_4_updated_tables.py  beb2f59bd99f_1_created_tables.py  c6962513150c_20_updated_tables.py  cf1fad027fa7_init.py  d3afc4869d38_13_updated_tables.py  d507e81fc094_23_updated_tables.py  d631983e36f5_34_managers_confirmed.py  df4d4438bedb_31_roles.py  ebda473a1405_8_updated_tables.py  ef1969721157_14_updated_tables.py  f0e158eede10_2_updated_tables.py  fce68dc77f6a_10_updated_tables.py
BSP/reports/: report.py
BSP/sql_queries/: query_1.sql  query_2.sql
BSP/src/conf/: config.py
BSP/src/database/: connect.py  models.py
(+16 files in other folders)
